# backend

./: .env.example  .env.example.login_server  .env.example.non-login_server  .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt  running_with_wireguard.md
.github/workflows/: main_boleslaw-chrobry.yml  main_wladyslaw-lokietek.yml
api/: __init__.py  config.py  parsers.py  resources.py  utils.py
api/dependecies/: auth.py  supabase.py
api/models/: parsers.py
api/routers/: auth.py  bidders.py  comparison.py  initialization.py  multiplication.py  reconstruction.py  redistribution.py  reset.py  shares.py  status.py  xor.py
api/shamir_functions/: __init__.py
api/utils/: utils.py
tests/: __init__.py  comparison.py
